--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <p>Nothing to see here...</p>
+  <p>ini halaman pertama saya</p>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
